# os-proxy-resolver

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE.txt  README.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  ThirdPartyNotices.txt  about.hbs  about.toml  build.rs  deny.toml  index.d.ts  index.js  package.json  platform.js  prompt.md
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/workflows/: ci.yml
azure-pipelines/: publish.yml
azure-pipelines/cargo/: config.toml
azure-pipelines/steps/: authenticate-cargo.yml  build-linux-addon.yml  build-linux-musl-addon.yml  build-macos-addon.yml  build-windows-addon.yml
bench/electron/: README.md  main.js  package.json
docs/: architecture.mmd
examples/: leakcheck.rs  pac_bench.rs  pactester.rs  proxytester.rs  resolve.rs
npm/: ThirdPartyNotices.txt  about.hbs
npm/native/: Cargo.toml
npm/native/src/: lib.rs
npm/scripts/: build-linux-native.sh  build-native.js  verify-glibc.js  verify-packages.js
npm/test/: platform-selection.js  smoke.js
pac-wasm-guest/: Cargo.toml  README.md  pac_guest.wasm
pac-wasm-guest/src/: lib.rs
src/: bypass.rs  env_cfg.rs  fetch.rs  ffi.rs  lib.rs  notify.rs  pac_helpers.js  pac_helpers_ms.js  resolver.rs  state.rs  types.rs  wpad.rs
src/pac/: ffi.rs  mod.rs  shim.c  wasm_abi.rs  wasm_host.rs
src/pac/engine/: ffi.rs  mod.rs  pac_helpers.js  state.rs
src/pac/engine_wasm2c/: mod.rs  shim.c
src/pac/engine_wasmtime/: abi.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: async_resolution.rs  helpers.rs  hostile_pac.rs  integration.rs  microsoft.rs  pac_corpus.rs  robustness.rs  slow_timeout.rs
tests/common/: mod.rs
tests/data/: corporate.pac  ms_extensions.pac  socks_chain.pac
