[package]
name = "os-proxy-resolver"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
# All first-party code is MIT (see LICENSE.txt). The embedded PAC engine links
# the MIT-licensed quickjs-ng via the `rquickjs-sys` crate; the PAC helper
# functions are original, implemented from the public PAC specification.
license = "MIT"
description = "Resolve the OS-configured proxy (static, PAC, WPAD) for a URL, with change notification. WinHTTP on Windows; SystemConfiguration/gsettings + an embedded QuickJS PAC engine on macOS/Linux."
repository = "https://github.com/microsoft/os-proxy-resolver"
keywords = ["proxy", "pac", "wpad", "winhttp", "system-proxy"]
categories = ["network-programming", "os"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Async change notification via tokio::sync::watch.
tokio = ["dep:tokio"]
# Also build the embedded QuickJS PAC engine on Windows (it is always built off
# Windows). This is only for the `pac_bench` example, which compares WinHTTP
# against the embedded engine — production Windows stays WinHTTP-only / pure
# Rust, so this is deliberately *not* part of the default feature set.
pac-engine = ["dep:rquickjs-sys"]
# Additionally build the sandboxed PAC backend: QuickJS-NG compiled to
# WebAssembly (see pac-wasm-guest/), run under Wasmtime in AOT mode. The
# runtime dependency is compiled WITHOUT any compiler (no Cranelift/JIT) —
# build.rs precompiles the vendored guest module with a build-dependency
# Wasmtime instead, and at runtime only `Module::deserialize` is used. Opt-in
# on every platform; select it per resolver with `ResolverOptions.pac_backend`.
# (Implies `pac-engine` so the native engine is always available to compare
# against; off Windows that is a no-op.)
pac-engine-wasmtime = ["pac-engine", "dep:wasmtime"]

[dependencies]
url = "2"
log = "0.4"
tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }
# Runtime for the sandboxed PAC backend, in AOT mode only: `runtime` + `std`
# but deliberately NO `cranelift` (or `winch`/`pulley`), so this build cannot
# compile wasm at all — it can only `Module::deserialize` the artifact that
# build.rs precompiled. Pinned to the exact version of the `wasmtime-aot`
# build-dependency below because serialized modules only deserialize in the
# same Wasmtime version.
wasmtime = { version = "=46.0.1", optional = true, default-features = false, features = ["runtime", "std"] }

[build-dependencies]
# Compile-only Wasmtime (Cranelift, no runtime) used by build.rs to
# ahead-of-time compile pac-wasm-guest/pac_guest.wasm for $TARGET. Same crate,
# same pinned version as the runtime dependency above (serialized modules only
# deserialize in the identical Wasmtime version), but a different feature set:
# the feature resolver (v2) does not unify features between build- and normal
# dependencies, so Cranelift stays out of the library itself.
wasmtime = { version = "=46.0.1", optional = true, default-features = false, features = ["cranelift", "std"] }

[target.'cfg(not(windows))'.dependencies]
# PAC / wpad.dat fetching. Sync, small, rustls-backed so no OpenSSL cross headaches.
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
# Embedded QuickJS-NG (MIT) for the PAC engine. Vendors and compiles the
# quickjs-ng C sources via `cc`. Not used on Windows (WinHTTP handles PAC).
rquickjs-sys = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
# Optional on Windows so the default build stays pure Rust (WinHTTP handles
# PAC). Enabled by the `pac-engine` feature for the WinHTTP-vs-QuickJS
# benchmark. Off Windows the engine is always built (see the not(windows)
# table above), where this crate is a required dependency.
rquickjs-sys = { version = "0.12.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
