[package]
name = "os-proxy-resolver-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2"
os-proxy-resolver = { path = "../..", default-features = false, features = ["pac-engine-wasm2c"] }
url = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1