[package]
name = "os-proxy-resolver-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2"
url = "2"

[target.'cfg(windows)'.dependencies]
os-proxy-resolver = { path = "../..", default-features = false }

[target.'cfg(not(windows))'.dependencies]
os-proxy-resolver = { path = "../..", default-features = false, features = ["pac-engine-wasm2c"] }

[build-dependencies]
napi-build = "2"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1